manifests/ingress/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: venkyapp.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: venkatesh-frontend-svc
            port:
              number: 80
