manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: venkatesh-frontend-raw-svc
            port:
              number: 3000
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: venkatesh-backend-raw-svc
            port:
              number: 80
