manifests/ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: demo.localdev.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: venkatesh-backend-raw-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: venkatesh-frontend-raw-svc
                port:
                  number: 80
